Custom rewrite of the library

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "eris-sharder",
   "version": "1.9.0",
-  "description": "A sharder for the discord eris library",
+  "description": "A sharder for the discord eris library, adapted for my needs.",
   "main": "./src/index.js",
   "dependencies": {
     "asciiart-logo": "^0.2.6",
-    "colors": "^1.1.2",
-    "eris": "^0.11.0",
-    "fancy-log": "^1.3.0"
+    "chalk": "^4.0.0",
+    "eris": "^0.11.2",
+    "eslint": "^6.8.0",
+    "eventemitter3": "^4.0.0"
   },
   "devDependencies": {
     "tui-jsdoc-template": "^1.2.2",
@@ -18,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Discord-Sharders/eris-sharder.git"
+    "url": "git+https://github.com/Ernest05/eris-sharder.git"
   },
   "keywords": [
     "eris",
@@ -32,7 +33,33 @@
   "author": "John Smith",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Discord-Sharders/eris-sharder/issues"
+    "url": "https://github.com/Ernest05/eris-sharder/issues"
   },
-  "homepage": "https://github.com/Discord-Sharders/eris-sharder#readme"
+  "homepage": "https://github.com/Ernest05/eris-sharder#readme",
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 9,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "env": {
+      "node": true
+    },
+    "globals": {
+      "Map": true,
+      "Promise": true
+    },
+    "rules": {
+      "eqeqeq": "warn",
+      "semi": "warn",
+      "curly": "warn",
+      "no-empty": "warn",
+      "valid-jsdoc": "warn",
+      "no-extra-semi": "warn",
+      "no-unused-vars": "warn",
+      "no-undef": "error"
+    }
+  }
 }
